name:                bindings-libarchive
version:             0.1.0.0
synopsis:            Haskell bindings for libarchive.
description:         Please see README.md
homepage:            http://github.com/rimmington/bindings-libarchive#readme
license:             BSD3
license-file:        LICENSE
maintainer:          Rhys <rimmington@gmail.com>
-- copyright:           2010 Author Here
category:            Codec
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-tools:         hsc2hs
  exposed-modules:     Codec.Archive.FFI
                     , Codec.Archive.Internal
                     , Codec.Archive.Types
                     , Codec.Archive.Write
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , monad-loops
                     , unix
  extra-libraries:     archive
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bindings-libarchive
                     , hspec
                     , bytestring
                     , directory
                     , filepath
                     , temporary
                     , conduit-combinators
                     , libarchive-conduit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rimmington/bindings-libarchive
